# lfa

./: Cargo.toml  README.md
lfa/: Cargo.toml
lfa/src/: error.rs  features.rs  lib.rs  macros.rs  utils.rs
lfa/src/approximators/: mod.rs  pair.rs  scalar.rs  triple.rs  vector.rs
lfa/src/basis/: constant.rs  fourier.rs  ifdd.rs  kernelised.rs  mod.rs  normalisation.rs  random.rs  stack.rs  tile_coding.rs  uniform_grid.rs
lfa/src/basis/fixed/: kernelised.rs  uniform_grid.rs
lfa/src/basis/fixed/polynomial/: mod.rs
lfa/src/basis/kernels/: rational_quadratic.rs  stationary.rs
lfa/src/basis/polynomial/: cpfk.rs  mod.rs
lfa/src/composition/: scaling.rs
lfa/src/core/: approximator.rs  features.rs  into_vector.rs  primitives.rs
lfa/src/eval/: pair.rs  scalar.rs  triple.rs  vector.rs
lfa/src/lfa/: mod.rs  transformed.rs  vanilla.rs
lfa/src/optim/: adagrad.rs  adam.rs  adamax.rs  implicit.rs  isgd.rs  mod.rs  momentum.rs  nesterov.rs  sgd.rs  vanilla.rs
lfa/src/sgd/: adam.rs  adamax.rs  implicit.rs  mod.rs  momentum.rs  vanilla.rs
lfa/src/transforms/: identity.rs  logistic.rs  mod.rs  softplus.rs  tanh.rs
lfa/tests/: linear_regression.rs
lfa_derive/: Cargo.toml
lfa_derive/src/: lib.rs  parameterised.rs
src/: core.rs  error.rs  features.rs  lfa.rs  lib.rs  linear.rs  macros.rs  table.rs  utils.rs
src/approximators/: mod.rs  multi.rs  multi_linear.rs  pair.rs  scalar.rs  simple.rs  simple_linear.rs  triple.rs  vector.rs
src/basis/: closure.rs  composable.rs  constant.rs  feature.rs  fourier.rs  ifdd.rs  kernelised.rs  mod.rs  normalisation.rs  projection.rs  projector.rs  stack.rs  tile_coding.rs  uniform_grid.rs
src/basis/adaptive/: ifdd.rs  mod.rs
src/basis/composition/: arithmetic.rs  mod.rs  normalisation.rs  scaling.rs  shifting.rs  stack.rs
src/basis/fixed/: constant.rs  fourier.rs  kernelised.rs  mod.rs  random.rs  rbf_network.rs  tile_coding.rs  uniform_grid.rs
src/basis/fixed/polynomial/: mod.rs
src/basis/kernels/: mod.rs  rational_quadratic.rs  stationary.rs
src/basis/mixing/: arithmetic.rs  scaling.rs  shifting.rs  stack.rs
src/basis/polynomial/: mod.rs
src/composition/: arithmetic.rs  mod.rs  normalisation.rs  scaling.rs  shifting.rs  stack.rs
src/core/: approximator.rs  calculus.rs  error.rs  feature.rs  features.rs  mod.rs  parameterised.rs  primitives.rs  projection.rs  projector.rs
src/core/ops/: as_repeated.rs  elementwise.rs  into_vector.rs  mod.rs
src/eval/: mod.rs  pair.rs  scalar.rs  triple.rs  vector.rs
src/lfa/: transformed.rs  vanilla.rs
src/models/: lbfm.rs  mod.rs
src/optim/: adagrad.rs  adam.rs  adamax.rs  isgd.rs  mod.rs  momentum.rs  nesterov.rs  sgd.rs
src/pipeline/: bounds.rs  mod.rs
src/projection/: fourier.rs  mod.rs  polynomial.rs  rbf_network.rs  tile_coding.rs  uniform_grid.rs
src/projection/polynomial/: cpfk.rs  mod.rs
src/projectors/: feature.rs  mod.rs  projection.rs
src/projectors/adaptive/: ifdd.rs  mod.rs
src/projectors/fixed/: constant.rs  fourier.rs  mod.rs  random.rs  rbf_network.rs  tile_coding.rs  uniform_grid.rs
src/projectors/fixed/polynomial/: cpfk.rs  mod.rs
src/projectors/mixing/: arithmetic.rs  mod.rs  scaling.rs  shifting.rs  stack.rs
src/transforms/: exponential.rs  identity.rs  logistic.rs  mod.rs  softplus.rs
tests/: linear_regression.rs
