[package]
name = "lfa"
description = "Native rust implementations of linear function approximators."
authors = ["Tom Spooner <t.spooner@liverpool.ac.uk>"]

version = "0.11.0"
edition = "2018"

license = "MIT"
readme = "README.md"

keywords = ["function", "approximation", "linear", "ai", "rl"]

repository = "https://github.com/tspooner/lfa"
documentation = "https://docs.rs/lfa"

[badges]
travis-ci = { repository = "tspooner/lfa", branch = "master" }
coveralls = { repository = "tspooner/lfa", branch = "master", service = "github" }

[features]
default = []

serialize = ["serde", "serde_derive"]

[dependencies]
rand = "0.6"
spaces = "4.5"
itertools = "0.8"
elementwise = "0.3"

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = "0.7"
seahash = "3.0"
