[package]
name = "lfa"
description = "Native rust implementations of linear function approximators."
authors = ["Tom Spooner <spooner10000@gmail.com>"]

version = "0.15.0"
edition = "2018"

license = "MIT"
readme = "README.md"

keywords = ["function", "approximation", "linear", "ai", "rl"]

repository = "https://github.com/tspooner/lfa"
documentation = "https://docs.rs/lfa"

[badges]
travis-ci = { repository = "tspooner/lfa", branch = "master" }
coveralls = { repository = "tspooner/lfa", branch = "master", service = "github" }

[features]
default = []

blas = ["ndarray/blas"]
serde = ["serde_crate", "spaces/serialize", "ndarray/serde-1"]

[dependencies]
spaces = "5.0"
ndarray = "0.15"
itertools = "0.10"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
quickcheck = "1.0"
seahash = "4.0"

blas-src = { version = "0.8.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.10.4", default-features = false, features = ["cblas", "system"] }

rand = "0.8"
rand_distr = "0.4"
