[package]
name = "lfa"
description = "Native rust implementations of linear function approximators."
authors = ["Tom Spooner <spooner10000@gmail.com>"]

version = "0.12.1"
edition = "2018"

license = "MIT"
readme = "README.md"

keywords = ["function", "approximation", "linear", "ai", "rl"]

repository = "https://github.com/tspooner/lfa"
documentation = "https://docs.rs/lfa"

[badges]
travis-ci = { repository = "tspooner/lfa", branch = "master" }
coveralls = { repository = "tspooner/lfa", branch = "master", service = "github" }

[features]
default = []

random = ["rand", "rand_distr"]
serialize = ["serde", "serde_derive", "spaces/serialize", "ndarray/serde-1"]

[dependencies]
lfa_derive = { path = "../lfa_derive", version = "0.12" }

spaces = "5.0"
ndarray = "0.12"
itertools = "0.8"

rand = { version = "0.7", optional = true }
rand_distr = { version = "0.2", optional = true }

serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dev-dependencies]
quickcheck = "0.9"
seahash = "3.0"

rand = "0.7"
rand_distr = "0.2"
