[package]
name = "lfa_derive"
description = "Macros for LFA"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

version = "0.13.0"
edition = "2018"

license = "MIT"
readme = "README.md"

keywords = ["function", "approximation", "linear", "ai", "rl"]

repository = "https://github.com/tspooner/lfa"
documentation = "https://docs.rs/lfa"

[badges]
travis-ci = { repository = "tspooner/lfa", branch = "master" }
coveralls = { repository = "tspooner/lfa", branch = "master", service = "github" }

[lib]
name = "lfa_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
